tests/invalid/While_Invalid_25.whiley
function count(int n) -> (int|null r):
   int|null i = 0
   //
   while i < n:
      i = null
   //
   return i